--- a/static/themes/nightswatch/theme.css
+++ b/static/themes/nightswatch/theme.css
@@ -222,7 +222,7 @@
 }
 
 .kiwi-avatar-inner {
-    background-color: var(--brand-default-bg);
+    background-color: var(--brand-primary);
     color: var(--brand-default-fg);
 }
 
