--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -720,6 +720,10 @@
     color: #14fdce;
 }
 
+.kiwi-avatar-inner {
+    background-color: #11402a;
+}
+
 /* Not connected message ( NotConnected.vue ) */
 .kiwi-notconnected {
     color: #fff;
