--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -210,7 +210,7 @@
     background-color: var(--brand-default-bg);
 }
 
-.kiwi-controlinput-command-warn .fa-exclamation-triangle {
+.kiwi-controlinput-command-warn .fa-triangle-exclamation {
     color: var(--brand-error);
 }
 
@@ -570,24 +570,6 @@
     background: rgba(255, 255, 255, 0.1);
 }
 
-/* Icon before the network in network list */
-.kiwi-statebrowser-network-name::before {
-    content: '\f233';
-    font-family: fontAwesome, Helvetica, Arial, Verdana, Tahoma, sans-serif;
-    margin-right: 2px;
-    font-weight: 100;
-    text-decoration: none;
-}
-
-/* Icons in the Channel List */
-.kiwi-statebrowser-channel[data-name^="*"]::before {
-    content: '\f006';
-}
-
-.kiwi-statebrowser-channel[data-name="#help"]::before {
-    content: '\f059';
-}
-
 .kiwi-statebrowser-channel::before {
     font-family: fontAwesome, Helvetica, Arial, Verdana, Tahoma, sans-serif;
     margin-right: 8px;
@@ -755,20 +737,12 @@
     color: var(--brand-primary);
 }
 
-.kiwi-networksettings .kiwi-customserver-tls {
-    color: var(--brand-midtone);
+.kiwi-networksettings .kiwi-customserver-tls path {
+    fill: var(--brand-primary);
 }
 
-.kiwi-networksettings .kiwi-customserver-tls--enabled {
-    color: var(--brand-primary);
-}
-
-.kiwi-networksettings .kiwi-customserver-tls--enabled .kiwi-customserver-tls-lock {
-    color: var(--brand-primary);
-}
-
-.kiwi-networksettings .kiwi-customserver-tls-minus {
-    color: var(--brand-error);
+.kiwi-networksettings .kiwi-customserver-tls--enabled path {
+    fill: var(--brand-error);
 }
 
 .kiwi-networksettings-error {
