--- a/static/themes/radioactive/theme.css
+++ b/static/themes/radioactive/theme.css
@@ -437,7 +437,7 @@
     background-color: #07311a;
 }
 
-.kiwi-controlinput-command-warn .fa-exclamation-triangle {
+.kiwi-controlinput-command-warn .fa-triangle-exclamation {
     color: #c54d53;
 }
 
@@ -1181,26 +1181,6 @@
 
 .kiwi-bufferkey-button {
     border: 1px solid #5dd895;
-}
-
-/*Icon before the network in network list */
-.kiwi-statebrowser-network-name::before {
-    content: '\f233';
-    font-family: fontAwesome;
-    margin-right: 2px;
-    font-weight: 100;
-    text-decoration: none;
-}
-
-/* Icons in the Channel List */
-.kiwi-statebrowser-channel[data-name^="*"]::before {
-    content: '\f006';
-    font-family: fontAwesome;
-}
-
-.kiwi-statebrowser-channel[data-name="#help"]::before {
-    content: '\f059';
-    font-family: fontAwesome;
 }
 
 /* U table line breaks */
