--- a/static/themes/common/base.css
+++ b/static/themes/common/base.css
@@ -115,8 +115,7 @@
 }
 
 .u-button-secondary {
-    background: rgba(117, 117, 117, 0.07);
-    border-bottom: 1px solid rgba(117, 117, 117, 0.2);
+    background: rgba(117, 117, 117, 0.2);
 }
 
 .u-button-warning {
@@ -989,11 +988,7 @@
 
 .kiwi-messageinfo-actions .u-link {
     border-color: var(--brand-default-fg);
-    color: var(--brand-default-fg);
-}
-
-.kiwi-messageinfo-actions .kiwi-messageinfo-reply {
-    background: var(--brand-primary);
+    background-color: var(--brand-primary);
     color: var(--brand-default-bg);
 }
 
