statebrowser_buffer plugins,+ircCommand to message

--- a/static/themes/dark/theme.css
+++ b/static/themes/dark/theme.css
@@ -7,9 +7,11 @@
     --brand-darktone: #969696;
     --brand-default-bg: #1e1e1e;
     --brand-default-fg: #ababab;
+    --comp-statebrowser-highlight: var(--brand-notice);
     --brand-notice: #f6c358;
     --brand-warning: #fcb46e;
     --brand-error: #b9444c;
+    --github-icon: url(https://github.githubassets.com/favicons/favicon-dark.png);
     --comp-workspace-before-bg: var(--brand-primary);
     --comp-bg-kiwi-workspace--disconnected-after-bg: var(--brand-error);
     --comp-header-bg: var(--brand-default-bg);
